--- a/WebGUI/html/Visualization-Dario.html
+++ b/WebGUI/html/Visualization-Dario.html
@@ -18,10 +18,10 @@
   </style>
   
   <link   href="/WebPath/css/fonts.css?family=Donegal+One"                                      type="text/css"        rel="stylesheet"/>
-  <link   href="/WebPath/extjsLib-6/build/examples/classic/shared/examples.css"                 type="text/css"        rel="stylesheet"/>
+  <link   href="/WebPath/ext-6.2.0/build/examples/classic/shared/examples.css"                 type="text/css"        rel="stylesheet"/>
   <link   href="../css/HistogramViewer.css"                                                     type="text/css"        rel="stylesheet"/>
  
-  <script  src="/WebPath/extjsLib-6/build/examples/classic/shared/include-ext.js?theme=classic" type="text/javascript"		        ></script>
+  <script  src="/WebPath/ext-6.2.0/build/examples/classic/shared/include-ext.js?theme=classic" type="text/javascript"		        ></script>
 
   <!-- W A R N I N G: The JSROOT stuff must precede the Extjs one! -->
   <script  src="../js/Debug.js"   			                                        type="text/javascript"                  ></script>
