--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -1230,6 +1230,42 @@
 
 
 			//=====================================================================================
+			function setWidgetPVinfo(pvName, pvValue, pvTime, pvStatus, pvSeverity, showLabel, containers, widgetElement)
+			{
+				var now = Math.floor(Date.now())/1000;
+				var time2compare = pvTime*1. + 240.;
+
+				if (containers !== null && containers[pvName] !== null)
+					if (showLabel == "true")
+					{
+						if(pvSeverity == "MAJOR" )
+							containers[pvName].innerHTML = "<center style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						else if(pvSeverity == "MINOR")
+							containers[pvName].innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						else
+							if ((pvTime !== undefined) && (time2compare > now))
+								containers[pvName].innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+							else
+								containers[pvName].innerHTML = "<center style = 'color: grey'>"
+																+ pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />")
+																//+ "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
+																+ "<br>NOT UPDATED FOR MORE THAN " + parseInt((now - pvTime*1.)/60) + " MINUTES</center>";
+					}
+					else
+						containers[pvName].innerHTML = "<center>";
+
+				console.log("thermometer date now: " + now + " pvtime: " + pvTime + " refresh rate: 10 sec");
+				if (widgetElement !== null)
+					if ((pvTime !== undefined) && (time2compare > now))
+						widgetElement.style.backgroundColor = 'white';
+					else
+						widgetElement.style.backgroundColor = 'lightgrey';
+				else
+					console.log("setWidgetPVinfo(): Error widgetElement = null");
+			} //end setWidgetPVinfo()
+
+
+			//=====================================================================================
 			function getHistory(id, parameters)
 			{
 				var pvList = "";
@@ -1550,8 +1586,8 @@
 
 					if(!editBlock_.isHidden) 
 					{
-						Debug.log("FIXME use edit pencil icon instead of double click",Debug.HIGH_PRIORITY);
-						//mainBlockContainer.addEventListener("dblclick", toggleContextMenuCaller(widgetFrame.id));
+						//Debug.log("FIXME use edit pencil icon instead of double click",Debug.HIGH_PRIORITY);
+						mainBlockContainer.addEventListener("dblclick", toggleContextMenuCaller(widgetFrame.id));
 					}
 
 					mainBlockContainer.addEventListener("mousedown", startWidgetDrag);
