--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -27,10 +27,11 @@
 		<script type="text/javascript" src="libraries/gauge.js"></script>
 
 		<script>
-			//functions:			
-			//init()					
+			//functions:
+			//init()
 
 			var gauges = [];
+			var containers = [];
 			var pv_settings_ = [];
 			var parameters_ = {class: "", "show_labels": "true"};
 /////////////////////////////////////////////////////////////////////////////////////////
@@ -55,6 +56,7 @@
 			var parameters_;
 			function newWidget(widget, parameters) 
 			{
+				containers = [];
 				widget_ = widget;
 				parameters_ = parameters;
 				var olddiv = document.getElementById("dispaly-div");
@@ -72,16 +74,21 @@
 					//divtemp.style.color = "white";
 					divtemp.style.fontSize = "auto";
 					if (parameters_["show_labels"] == "true")
-						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</center>";
+					{
+						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</center>"
+						var max_size = Math.max(window.innerHeight -50, window.innerWidth - 50) / Object.keys(widget.PVList).length;
+					}
 					else
-						divtemp.innerHTML = "WAITING FOR A NEW PV VALUE...";
+					{
+						//divtemp.innerHTML = "WAITING FOR A NEW PV VALUE...";
+						divtemp.innerHTML = "";
+						var max_size = Math.max(window.innerHeight -10, window.innerWidth - 10) / Object.keys(widget.PVList).length;
+					}
 					divtemp.id = "gauge-div-" + pv_number;
 					divtemp.style.width = "100%";
 					divtemp.style.height = "100%";
 					div.appendChild(divtemp);
-
-					//var max_size = Math.min(window.innerHeight, window.innerWidth) / Math.max(rows, columns);
-					var max_size = Math.max(window.innerHeight, window.innerWidth) / Object.keys(widget.PVList).length;
+					containers[pv] = document.getElementById("p-" + pv);
 
 					var label = pv_settings_[pv] !== undefined ? pv_settings_[pv].Units : "";
 					var min   = pv_settings_[pv] !== undefined ? pv_settings_[pv].Lower_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pv].Lower_Display_Limit) : 0 : 0;
@@ -106,76 +113,27 @@
 			function setParameters(attributes)
 			{
 				parameters_ = attributes;
-				console.log("thermometer: set parameters()");
+				console.log("gauge: set parameters()");
 				console.log(parameters_);
 			}
 
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("Gauge newValue() reached", pvName, pvValue);
-					var pv = "p-" + pvName;
-	
-				if (parameters_["show_labels"] == "true")
-				{
-					if(pvSeverity == "MAJOR" )
-						document.getElementById(pv).innerHTML = "<center style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
-					else if(pvSeverity == "MINOR")
-						document.getElementById(pv).innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
-					else
-						document.getElementById(pv).innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
-				}
-				else
-					document.getElementById(pv).innerHTML = "";
+
+				window.parent.setWidgetPVinfo(
+									  pvName
+									, pvValue
+									, pvTime
+									, pvStatus
+									, pvSeverity
+									, parameters_["show_labels"]
+									, containers[pvName]
+									, gauges[pvName].body[0][0].parentElement
+									);
 
 				gauges[pvName].redraw(pvValue);
 				gauges[pvName].body[0][0].parentElement.title = window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
-
-//				document.getElementById(pvName).innerHTML = (pvValue);// + " @ " + pvTime);
-//				document.getElementById(pvName).title = pvName + ":" + pvTime;
-//				document.getElementById(pvName).parentElement.style.border = pvName + ":" + pvTime;
-//				document.getElementById(pvName).parentElement.style["background-color"] = "transparent";
-//				if(pvSeverity == "NO_ALARM")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "green"
-//				}
-//				else if(pvSeverity == "MINOR")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "yellow"
-//				}else if(pvSeverity == "MAJOR")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "red"
-//				}else if(pvSeverity == "INVALID")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "DimGray";
-//				}
-//				else if(pvSeverity == "DC")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "Light Grey";
-//				}
-//				
-//				if(pvStatus == "NO_ALARM")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thin dotted green";
-//				}
-//				else if(pvStatus == "HIHI")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thick solid red"
-//				}else if(pvStatus == "LOLO")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thick solid MediumSlateBlue";
-//				}else if(pvStatus == "HIGH")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thin dotted red";
-//				}else if(pvStatus == "LOW")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thing dotted blue";
-//				}else if(pvStatus == "DC")
-//				{
-//					document.getElementById(pvName).parentElement.style["background-color"] = "Gainsboro";
-//				}else if(pvStatus == "UDF")
-//				{
-//					document.getElementById(pvName).parentElement.style["background-color"] = "yellow";
-//				}
 			}
 			//End Template
 
