again fix last merge on thermoeter and gauge widget

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -1586,8 +1586,8 @@
 
 					if(!editBlock_.isHidden) 
 					{
-						Debug.log("FIXME use edit pencil icon instead of double click",Debug.HIGH_PRIORITY);
-						//mainBlockContainer.addEventListener("dblclick", toggleContextMenuCaller(widgetFrame.id));
+						//Debug.log("FIXME use edit pencil icon instead of double click",Debug.HIGH_PRIORITY);
+						mainBlockContainer.addEventListener("dblclick", toggleContextMenuCaller(widgetFrame.id));
 					}
 
 					mainBlockContainer.addEventListener("mousedown", startWidgetDrag);
