--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -1,4 +1,6 @@
 
+
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   	<head>
@@ -72,16 +74,19 @@
 					//divtemp.style.color = "white";
 					divtemp.style.fontSize = "auto";
 					if (parameters_["show_labels"] == "true")
-						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</center>";
+					{
+						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</center>";
+						var max_size = Math.max(window.innerHeight - 50, window.innerWidth - 50) / Object.keys(widget.PVList).length;
+					}
 					else
-						divtemp.innerHTML = "WAITING FOR A NEW PV VALUE...";
+					{
+						divtemp.innerHTML = "";
+						var max_size = Math.max(window.innerHeight - 10, window.innerWidth -10) / Object.keys(widget.PVList).length;
+					}
 					divtemp.id = "gauge-div-" + pv_number;
 					divtemp.style.width = "100%";
 					divtemp.style.height = "100%";
 					div.appendChild(divtemp);
-
-					//var max_size = Math.min(window.innerHeight, window.innerWidth) / Math.max(rows, columns);
-					var max_size = Math.max(window.innerHeight, window.innerWidth) / Object.keys(widget.PVList).length;
 
 					var label = pv_settings_[pv] !== undefined ? pv_settings_[pv].Units : "";
 					var min   = pv_settings_[pv] !== undefined ? pv_settings_[pv].Lower_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pv].Lower_Display_Limit) : 0 : 0;
@@ -113,75 +118,40 @@
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("Gauge newValue() reached", pvName, pvValue);
-					var pv = "p-" + pvName;
-	
+				var pv = "p-" + pvName;
+				var now = Math.floor(Date.now())/1000;
+				var time2compare = pvTime*1. + 240.;
 				if (parameters_["show_labels"] == "true")
 				{
 					if(pvSeverity == "MAJOR" )
-						document.getElementById(pv).innerHTML = "<center style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						document.getElementById(pv).innerHTML = "<center style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
 					else if(pvSeverity == "MINOR")
-						document.getElementById(pv).innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						document.getElementById(pv).innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
 					else
-						document.getElementById(pv).innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						if ((pvTime !== undefined) && (time2compare > now))
+							document.getElementById(pv).innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						else
+							document.getElementById(pv).innerHTML = "<center style = 'color: grey'>"
+															+ pvName.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />")
+															//+ "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
+															+ "<br>NOT UPDATED FOR MORE THAN " + parseInt((now - pvTime*1.)/60) + " MINUTES</center>";
 				}
-				else
-					document.getElementById(pv).innerHTML = "";
 
 				gauges[pvName].redraw(pvValue);
 				gauges[pvName].body[0][0].parentElement.title = window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
 
-//				document.getElementById(pvName).innerHTML = (pvValue);// + " @ " + pvTime);
-//				document.getElementById(pvName).title = pvName + ":" + pvTime;
-//				document.getElementById(pvName).parentElement.style.border = pvName + ":" + pvTime;
-//				document.getElementById(pvName).parentElement.style["background-color"] = "transparent";
-//				if(pvSeverity == "NO_ALARM")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "green"
-//				}
-//				else if(pvSeverity == "MINOR")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "yellow"
-//				}else if(pvSeverity == "MAJOR")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "red"
-//				}else if(pvSeverity == "INVALID")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "DimGray";
-//				}
-//				else if(pvSeverity == "DC")
-//				{
-//					document.getElementById(pvName).parentElement.style.color = "Light Grey";
-//				}
-//				
-//				if(pvStatus == "NO_ALARM")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thin dotted green";
-//				}
-//				else if(pvStatus == "HIHI")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thick solid red"
-//				}else if(pvStatus == "LOLO")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thick solid MediumSlateBlue";
-//				}else if(pvStatus == "HIGH")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thin dotted red";
-//				}else if(pvStatus == "LOW")
-//				{
-//					document.getElementById(pvName).parentElement.style.border = "thing dotted blue";
-//				}else if(pvStatus == "DC")
-//				{
-//					document.getElementById(pvName).parentElement.style["background-color"] = "Gainsboro";
-//				}else if(pvStatus == "UDF")
-//				{
-//					document.getElementById(pvName).parentElement.style["background-color"] = "yellow";
-//				}
+				console.log("thermometer date now: " + now + " pvtime: " + pvTime + " refresh rate: 10 sec");
+				if (gauges[pvName].body[0][0].parentElement !== null)
+					if ((pvTime !== undefined) && (time2compare > now))
+						gauges[pvName].body[0][0].parentElement.style.backgroundColor = 'white';
+					else
+						gauges[pvName].body[0][0].parentElement.style.backgroundColor = 'lightgrey';
+				else
+					console.log("setWidgetPVinfo(): Error widgetElement = null");
 			}
-			//End Template
 
 			function createGauge(name, container, label, min, max, size)
 			{
-
 				var config = 
 				{
 					size: undefined != size ? size : 120,
