--- a/WebGUI/html/widgets/led.html
+++ b/WebGUI/html/widgets/led.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML>
+
+<!DOCTYPE HTMnL>
 <html lang="en">
 	<head>
 		<title>LED</title>
@@ -10,6 +11,14 @@
 				height: 30;
 				//margin: 0px !important;
 			}
+			.wrapper {
+			  display: grid;
+			  //grid-template-columns: repeat(2, 1fr);
+			  grid-template-columns: repeat(auto-fill,minmax(50px, 1fr));
+			  grid-gap: 0px;
+			  grid-auto-rows: minmax(100px, auto);
+			  //grid-auto-columns: 200px 200px;
+			}
 		</style>
 
 		<script>
@@ -17,7 +26,10 @@
 			//functions:
 			//init()
 
+			var leds = [];
+			var labelContainers = [];
 			var pv_settings_ = [];
+			var parameters_ = {class: "", "show_labels": "true"};
 
 			/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
@@ -38,22 +50,67 @@
 
 			function newWidget(widget, parameters)
 			{
-				drawLed();
-				var canvas = document.getElementById('led');
+				leds = [];
+				containers = [];
+
+				var div = document.getElementById("display")
+				for(var pv in widget.PVList)
+				{
+					var divtemp = document.getElementById('label-div-' + pv)
+					if (divtemp == null)
+					{
+						divtemp = document.createElement('div');
+						divtemp.id = "label-div-" + pv;
+					}
+
+					if (parameters_["show_labels"] == "true")
+						divtemp.innerHTML = "<center>" + pv.replace(/[&\/\\#,+()$~%.:*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...";
+					else
+						divtemp.innerHTML = "";
+
+					div.appendChild(divtemp);
+					labelContainers[pv] = divtemp;
+
+					drawLed(divtemp, pv);
+				}
+
+			}
+
+			function drawLed(div, pv)
+			{
+				var canvas = document.getElementById("led-" + pv);
+				if (canvas == null)
+				{
+					canvas = document.createElement('canvas');
+					canvas.id = "led-" + pv;
+					div.appendChild(canvas);
+					leds[pv] = canvas;
+				}
+				canvas.style.width = Math.min(window.innerWidth, window.innerHeight) - 18 + "px";
 				var context = canvas.getContext('2d');
-				context.fillStyle = 'gray';
+				var centerX = canvas.width / 2;
+				var centerY = canvas.height / 2;
+				var radius = Math.min(canvas.width/2 - 10, canvas.height/2 - 10);
+
+				context.beginPath();
+				context.arc(centerX, centerY, radius, 0, 2 * Math.PI, false);
+				context.fillStyle = 'grey';
 				context.fill();
+				context.lineWidth = 5;
+				context.strokeStyle = '#003300';
+				context.stroke();
 			}
 
 			function getParameters()
 			{
-				parameters = {};
-				return parameters;
+				return parameters_;
 			}
 
 			function setParameters(attributes)
 			{
-				
+				parameters_ = attributes;
+				console.log("thermometer: set parameters()");
+				console.log(parameters_);
 			}
 
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
@@ -71,26 +128,11 @@
 				context.fill();
 			}
 
-			function drawLed()
-			{
-				var canvas = document.getElementById('led');
-				canvas.style.width = Math.min(window.innerWidth, window.innerHeight) - 18 + "px";
-				var context = canvas.getContext('2d');
-				var centerX = canvas.width / 2;
-				var centerY = canvas.height / 2;
-				var radius = Math.min(canvas.width/2 - 10, canvas.height/2 - 10);
-				
-				context.beginPath();
-				context.arc(centerX, centerY, radius, 0, 2 * Math.PI, false);
-				context.fillStyle = 'grey';
-				context.fill();
-				context.lineWidth = 5;
-				context.strokeStyle = '#003300';
-				context.stroke();				
-			}
-
 			window.onresize = function() {
-				drawLed();
+				for(var name in leds)
+				{
+					drawLed(labelContainers[name], name);
+				}
 			}
 
 		</script>
@@ -98,8 +140,7 @@
 </head>
 
 	<body onload='Javascript:init();'>
-
-	<canvas id="led"></canvas>
+		<div class="wrapper" id="display"></div>
 	</body>
 
 </html>
