changed widget function name newWidget to drawWidget

--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -56,7 +56,7 @@
 
 			var widget_;
 			var parameters_;
-			function newWidget(widget, parameters) 
+			function drawWidget(widget, parameters) 
 			{
 				widget_ = widget;
 				parameters_ = parameters;
