--- a/WebGUI/html/widgets/label.html
+++ b/WebGUI/html/widgets/label.html
@@ -38,7 +38,7 @@
 
 			function setupPVs(settings)	{}
 
-			function newWidget(widget, parameters)
+			function drawWidget(widget, parameters)
 			{
 				setParameters(window.parent.page_.widgets[widget.el.id].attributes);
 			}
