--- a/WebGUI/html/widgets/plotly_bar_chart.html
+++ b/WebGUI/html/widgets/plotly_bar_chart.html
@@ -46,7 +46,7 @@
 				pv_settings_ = settings;
 			}
 
-			function newWidget(widget, parameters)
+			function drawWidget(widget, parameters)
 			{
 				var i = 0;
 				PVList = {};
