--- a/WebGUI/html/widgets/siren_alarm.html
+++ b/WebGUI/html/widgets/siren_alarm.html
@@ -52,7 +52,7 @@
 				pv_settings_ = settings;
 			}
 
-			function newWidget(widget, parameters)
+			function drawWidget(widget, parameters)
 			{
 				drawSirenAlarm();
 				console.log(document.body);
