--- a/WebGUI/html/widgets/widget_text.html
+++ b/WebGUI/html/widgets/widget_text.html
@@ -4,7 +4,6 @@
 		<title>Text</title>
 		<style type="text/css">			
 			body {
-				//background-color: rgb(41,46,55);
 				background-color: rgb(250,250,250);
 			}
 			a{
@@ -49,7 +48,7 @@
 				pv_settings_ = settings;
 			}
 
-			function newWidget(widget, parameters) 
+			function drawWidget(widget, parameters) 
 			{			
 				var table = document.createElement('table');
 				table.id = "display-table";
