--- a/WebGUI/html/widgets/picture.html
+++ b/WebGUI/html/widgets/picture.html
@@ -35,7 +35,7 @@
 
 			function setupPVs(settings)	{}
 
-			function newWidget(widget, parameters)
+			function drawWidget(widget, parameters)
 			{
 				setParameters(window.parent.page_.widgets[widget.el.id].attributes);
 			}
