--- a/WebGUI/html/widgets/root_visualizer.html
+++ b/WebGUI/html/widgets/root_visualizer.html
@@ -84,7 +84,7 @@
 
 			function setupPVs(settings)	{}
 
-			function newWidget(widget, parameters)
+			function drawWidget(widget, parameters)
 			{
 				setParameters(window.parent.page_.widgets[widget.el.id].attributes);
 				console.log(document.getElementById("simpleGUI"));
