--- a/WebGUI/html/widgets/thermometer.html
+++ b/WebGUI/html/widgets/thermometer.html
@@ -49,7 +49,7 @@
 				pv_settings_ = settings;
 			}
 
-			function newWidget(widget, parameters)
+			function drawWidget(widget, parameters)
 			{
 				thermometers = [];
 				containers = [];
